--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -7930,7 +7930,8 @@ spec:
                             by default.
                           properties:
                             allowedGroups:
-                              description: List of groups allowed to access Che.
+                              description: List of groups allowed to access Che (currently
+                                supported for OpenShift only).
                               items:
                                 type: string
                               type: array
@@ -7940,7 +7941,8 @@ spec:
                                 type: string
                               type: array
                             disabledGroups:
-                              description: List of groups disabled to access Che.
+                              description: List of groups disabled to access Che (currently
+                                supported for OpenShift only).
                               items:
                                 type: string
                               type: array
