--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -7721,7 +7721,8 @@ spec:
                           no users are disallowed to access Che by default.
                         properties:
                           allowedGroups:
-                            description: List of groups allowed to access Che.
+                            description: List of groups allowed to access Che (currently
+                              supported for OpenShift only).
                             items:
                               type: string
                             type: array
@@ -7731,7 +7732,8 @@ spec:
                               type: string
                             type: array
                           disabledGroups:
-                            description: List of groups disabled to access Che.
+                            description: List of groups disabled to access Che (currently
+                              supported for OpenShift only).
                             items:
                               type: string
                             type: array
