--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -7740,7 +7740,8 @@ spec:
                           no users are disallowed to access Che by default.
                         properties:
                           allowedGroups:
-                            description: List of groups allowed to access Che.
+                            description: List of groups allowed to access Che (currently
+                              supported for OpenShift only).
                             items:
                               type: string
                             type: array
@@ -7750,7 +7751,8 @@ spec:
                               type: string
                             type: array
                           disabledGroups:
-                            description: List of groups disabled to access Che.
+                            description: List of groups disabled to access Che (currently
+                              supported for OpenShift only).
                             items:
                               type: string
                             type: array
