ci: Add new bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -61,3 +61,5 @@ entries:
     replaces: eclipse-che.v7.75.0
   - name: eclipse-che.v7.77.0
     replaces: eclipse-che.v7.76.0
+  - name: eclipse-che.v7.78.0
+    replaces: eclipse-che.v7.77.0
