--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -7731,13 +7731,13 @@ spec:
                       advancedAuthorization:
                         description: Advance authorization settings. Determines which
                           users and groups are allowed to access Che. User is allowed
-                          to access Che if he/she is either in the `allowedUsers`
-                          or is member of one of group from `allowedGroups` and not
-                          in neither the `disabledUsers` nor is member of one of group
-                          from `disabledGroups`. If `allowedUsers` and `allowedGroups`
-                          are empty, then all users are allowed to access Che by default.
-                          if `disabledUsers` and `disabledGroups` are empty, then
-                          no users are disallowed to access Che by default.
+                          to access Che if he/she is either in the `allowUsers` list
+                          or is member of group from `allowGroups` list and not in
+                          neither the `denyUsers` list nor is member of group from
+                          `denyGroups` list. If `allowUsers` and `allowGroups` are
+                          empty, then all users are allowed to access Che. if `denyUsers`
+                          and `denyGroups` are empty, then no users are denied to
+                          access Che.
                         properties:
                           allowGroups:
                             description: List of groups allowed to access Che (currently
