--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -63,3 +63,5 @@ entries:
     replaces: eclipse-che.v7.76.0
   - name: eclipse-che.v7.78.0
     replaces: eclipse-che.v7.77.0
+  - name: eclipse-che.v7.79.0
+    replaces: eclipse-che.v7.78.0
