Support `cookie_refresh` for oauth2-proxy.
This will fix #22765 .

--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -8019,6 +8019,13 @@ spec:
                                 format: int32
                                 minimum: 0
                                 type: integer
+                              cookieRefreshSeconds:
+                                default: 0
+                                description: Refresh timeframe for cookie. If set
+                                  to 0, disabled.
+                                format: int32
+                                minimum: 0
+                                type: integer
                             type: object
                           traefik:
                             description: Configuration for Traefik within the Che
