feat: Use  registry.devfile.io by default in Eclipse Che
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/helmcharts/next/templates/org_v2_checluster.yaml
+++ b/helmcharts/next/templates/org_v2_checluster.yaml
@@ -20,7 +20,7 @@ spec:
     pluginRegistry:
       disableInternalRegistry: true
       externalPluginRegistries:
-        - url: https://registry.devfile.io/
+        - url: 'https://registry.devfile.io'
   devEnvironments: {}
   networking:
     tlsSecretName: che-tls
