--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -40,6 +40,8 @@ metadata:
               "enable": true
             },
             "server": {
+              "externalPluginRegistry": true,
+              "pluginRegistryUrl": "https://registry.devfile.io",
               "workspaceNamespaceDefault": "<username>-che"
             },
             "storage": {
@@ -60,7 +62,7 @@ metadata:
                 "disableInternalRegistry": true,
                 "externalPluginRegistries": [
                   {
-                    "url": "https://registry.devfile.io/"
+                    "url": "https://registry.devfile.io"
                   }
                 ]
               }
@@ -86,7 +88,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.82.0-837.next
+  name: eclipse-che.v7.82.0-839.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1257,7 +1259,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.82.0-837.next
+  version: 7.82.0-839.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
